--- a/app/src/main/res/layout/list_item_tracking.xml
+++ b/app/src/main/res/layout/list_item_tracking.xml
@@ -6,6 +6,7 @@
     <data>
 
         <import type="android.view.View" />
+        <import type="seamonster.kraken.androidep7.ui.BindingUtil"/>
 
         <variable
             name="tracking"
@@ -19,6 +20,7 @@
         android:layout_marginTop="4dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clItemContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
@@ -48,13 +50,14 @@
                     android:layout_height="match_parent"
                     android:inputType="text|textMultiLine"
                     android:lineSpacingExtra="2pt"
-                    android:maxLines="4"
-                    android:minLines="2"
+                    android:gravity="start"
+                    android:minLines="@{!checkboxEditMode.checked ? 3 : 9}"
                     android:paddingTop="12dp"
                     android:paddingBottom="4dp"
-                    android:text="@{tracking.content}"
+                    android:text="@={tracking.content}"
                     android:textAppearance="?textAppearanceBodyMedium"
-                    tools:text="line1" />
+                    tools:text="line1"
+                    tools:minLines="3"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.imageview.ShapeableImageView
@@ -70,8 +73,8 @@
                 android:id="@+id/materialTextView6"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@{tracking.date}"
-                android:textAppearance="?textAppearanceBodySmall"
+                android:text="@{BindingUtil.calendarToString(tracking.date)}"
+                android:textAppearance="@style/textAppearanceDateTimeSmall"
                 app:layout_constraintBottom_toBottomOf="@id/shapeableImageView3"
                 app:layout_constraintStart_toEndOf="@+id/shapeableImageView3"
                 app:layout_constraintTop_toTopOf="@+id/shapeableImageView3"
@@ -82,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/save_changes"
-                android:visibility="@{checkboxEditMode.checked ? View.VISIBLE : View.GONE}"
+                android:visibility="@{!checkboxEditMode.checked ? View.GONE : View.VISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/materialTextView6" />
 
@@ -94,7 +97,7 @@
                 android:backgroundTint="?colorError"
                 android:text="@string/delete"
                 android:textColor="?colorOnError"
-                android:visibility="@{checkboxEditMode.checked ? View.VISIBLE : View.GONE}"
+                android:visibility="@{!checkboxEditMode.checked ? View.GONE : View.VISIBLE}"
                 app:layout_constraintEnd_toStartOf="@+id/buttonSaveChanges"
                 app:layout_constraintTop_toBottomOf="@+id/materialTextView6" />
         </androidx.constraintlayout.widget.ConstraintLayout>
