--- a/app/src/main/res/navigation/auth_navigation_graph.xml
+++ b/app/src/main/res/navigation/auth_navigation_graph.xml
@@ -1,29 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:startDestination="@id/loginFragment">
-
     <fragment
         android:id="@+id/loginFragment"
         android:name="seamonster.kraken.androidep7.ui.login.LoginFragment"
-        android:label="LoginFragment" >
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
         <action
-            android:id="@+id/action_loginFragment_to_resetPasswordFragment"
-            app:destination="@id/resetPasswordFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left" />
+            android:id="@+id/signupAction"
+            app:destination="@id/signupFragment" />
         <action
-            android:id="@+id/action_loginFragment_to_signUpFragment"
-            app:destination="@id/signUpFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left" />
+            android:id="@+id/resetPasswordAction"
+            app:destination="@id/resetPasswordFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/signupFragment"
+        android:name="seamonster.kraken.androidep7.ui.signup.SignupFragment"
+        android:label="SignupFragment" />
     <fragment
         android:id="@+id/resetPasswordFragment"
         android:name="seamonster.kraken.androidep7.ui.login.ResetPasswordFragment"
         android:label="ResetPasswordFragment" />
-    <fragment
-        android:id="@+id/signUpFragment"
-        android:name="seamonster.kraken.androidep7.ui.signup.SignUpFragment"
-        android:label="SignUpFragment" />
 </navigation>
