--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -2,24 +2,28 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainNavigationGraph"
     android:label="MainNavigationGraph"
     app:startDestination="@id/mainFragment">
 
     <fragment
-        android:id="@+id/settingsFragment"
-        android:name="seamonster.kraken.androidep7.ui.settings.SettingsFragment"
-        android:label="fragment_settings"
-        tools:layout="@layout/fragment_settings" />
-    <fragment
-        android:id="@+id/userDetailFragment"
-        android:name="seamonster.kraken.androidep7.ui.user.UserDetailFragment"
-        android:label="fragment_user_detail"
-        tools:layout="@layout/fragment_user_detail">
-        <argument
-            android:name="userId"
-            android:defaultValue="-1"
-            app:argType="integer" />
+        android:id="@+id/mainFragment"
+        android:name="seamonster.kraken.androidep7.ui.main.MainFragment"
+        android:label="fragment_main"
+        tools:layout="@layout/fragment_main">
+        <action
+            android:id="@+id/seeUserDetailAction"
+            app:destination="@id/userDetailFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
+        <action
+            android:id="@+id/showOptionsAction"
+            app:destination="@id/meFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
         android:id="@+id/meFragment"
@@ -47,27 +51,23 @@
             app:popExitAnim="@anim/slide_out_left" />
     </fragment>
     <fragment
-        android:id="@+id/mainFragment"
-        android:name="seamonster.kraken.androidep7.ui.main.MainFragment"
-        android:label="fragment_main"
-        tools:layout="@layout/fragment_main">
-        <action
-            android:id="@+id/seeUserDetailAction"
-            app:destination="@id/userDetailFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
-        <action
-            android:id="@+id/showOptionsAction"
-            app:destination="@id/meFragment"
-            app:enterAnim="@anim/slide_in_right"
-            app:exitAnim="@anim/slide_out_left"
-            app:popEnterAnim="@anim/slide_in_right"
-            app:popExitAnim="@anim/slide_out_left" />
+        android:id="@+id/userDetailFragment"
+        android:name="seamonster.kraken.androidep7.ui.user.UserDetailFragment"
+        android:label="fragment_user_detail"
+        tools:layout="@layout/fragment_user_detail">
+        <argument
+            android:name="userId"
+            android:defaultValue="-1"
+            app:argType="integer" />
     </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="seamonster.kraken.androidep7.ui.settings.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" />
     <fragment
         android:id="@+id/editInfoFragment"
         android:name="seamonster.kraken.androidep7.ui.me.EditInfoFragment"
-        android:label="EditInfoFragment" />
+        android:label="EditInfoFragment"
+        tools:layout="@layout/fragment_edit_me" />
 </navigation>
