--- a/app/src/main/res/layout/list_item_tracking.xml
+++ b/app/src/main/res/layout/list_item_tracking.xml
@@ -6,7 +6,8 @@
     <data>
 
         <import type="android.view.View" />
-        <import type="seamonster.kraken.androidep7.ui.BindingUtil"/>
+
+        <import type="seamonster.kraken.androidep7.ui.BindingUtil" />
 
         <variable
             name="tracking"
@@ -17,10 +18,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="2dp"
-        android:layout_marginTop="4dp">
+        android:layout_marginTop="4dp"
+        android:checkable="true"
+        android:clickable="false">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clItemContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
@@ -43,21 +45,24 @@
                 app:hintTextAppearance="?textAppearanceTitleSmall"
                 app:layout_constraintEnd_toStartOf="@+id/checkboxEditMode"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                tools:enabled="false">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textContent"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:gravity="start"
                     android:inputType="text|textMultiLine"
                     android:lineSpacingExtra="2pt"
-                    android:gravity="start"
                     android:minLines="@{!checkboxEditMode.checked ? 3 : 9}"
-                    android:paddingTop="12dp"
-                    android:paddingBottom="4dp"
+                    android:paddingTop="14dp"
+                    android:paddingBottom="6dp"
                     android:text="@={tracking.content}"
+                    android:textColor="?colorOnSurface"
                     android:textAppearance="?textAppearanceBodyMedium"
-                    tools:text="line1"
-                    tools:minLines="3"/>
+                    tools:minLines="3"
+                    tools:text="line1" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.imageview.ShapeableImageView
@@ -84,6 +89,7 @@
                 android:id="@+id/buttonSaveChanges"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:enabled="@{!tracking.content.empty}"
                 android:text="@string/save_changes"
                 android:visibility="@{!checkboxEditMode.checked ? View.GONE : View.VISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
