added get/set token device, delete token at log out, fix bugs & improve performance

--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -10,7 +10,7 @@
             name="user"
             type="seamonster.kraken.androidep7.data.models.User" />
 
-        <import type="seamonster.kraken.androidep7.ui.BindingUtil" />
+        <import type="seamonster.kraken.androidep7.util.BindingUtil" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
