--- a/app/src/main/res/layout/fragment_edit_me.xml
+++ b/app/src/main/res/layout/fragment_edit_me.xml
@@ -7,7 +7,7 @@
 
         <import type="seamonster.kraken.androidep7.util.Patterns" />
 
-        <import type="seamonster.kraken.androidep7.ui.BindingUtil" />
+        <import type="seamonster.kraken.androidep7.util.BindingUtil" />
 
         <import type="android.view.View" />
 
