--- a/app/src/main/res/layout/list_item_tracking.xml
+++ b/app/src/main/res/layout/list_item_tracking.xml
@@ -7,7 +7,7 @@
 
         <import type="android.view.View" />
 
-        <import type="seamonster.kraken.androidep7.ui.BindingUtil" />
+        <import type="seamonster.kraken.androidep7.util.BindingUtil" />
 
         <variable
             name="tracking"
